stateDiagram-v2
  [*] --> pending
  pending --> eligible: dependencies and preconditions met
  pending --> skipped: policy skip
  pending --> error: precondition error
  pending --> cancelled: cancelled
  eligible --> running: first action claimed
  eligible --> skipped: policy skip
  eligible --> error: startup error
  eligible --> cancelled: cancelled
  running --> passed: required assertions pass
  running --> failed: comparable assertion fails
  running --> error: environment or harness error
  running --> skipped: explicit skip policy
  running --> ambiguous: explicitly sealed or legacy ambiguity
  running --> cancelled: cancelled
  passed --> [*]
  failed --> [*]
  error --> [*]
  skipped --> [*]
  ambiguous --> [*]
  cancelled --> [*]
  note right of running
    Resumable unknown_outcome keeps the scenario
    running and its assertions pending while the run pauses.
  end note
